# bloxminer

./: .gitignore  CMakeLists.txt  CONTINUATION.md  CONTINUITY.md  LICENSE  README.md  h-install.sh  h-stats.sh  install.sh  pgo-build.sh
include/: config.hpp  config_manager.hpp  miner.hpp
include/stratum/: stratum_client.hpp
include/utils/: api_server.hpp  display.hpp  hex_utils.hpp  logger.hpp  system_monitor.hpp
src/: config_manager.cpp  main.cpp  miner.cpp
src/crypto/: haraka.c  haraka.h  verus_clhash.c  verus_clhash.h  verus_clhash_v2.c  verus_hash.cpp  verus_hash.h
src/stratum/: stratum_client.cpp
src/utils/: hex_utils.cpp  logger.cpp
tests/: ccminer_clhash.cpp  test_clhash_compare.cpp  test_config_defaults.cpp  test_target.cpp  test_verushash.cpp
